[tool.poetry]
name = "til"
version = "0.1.0"
description = "Keep track of things you learn each day"
authors = ["Kamyar Ghasemlou <github@kamy.me>"]
packages = [
    { include = "til" }
]
[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
til = "til.main:til_command"
